--- a/index.html
+++ b/index.html
@@ -162,6 +162,17 @@
   </header>
 
   <main>
+<section style="text-align: center; padding: 2rem; background: #e6f4e6; margin-bottom: 2rem; border-radius: 8px;">
+  <h2 style="color: #2e7d32; font-size: 2rem; margin-bottom: 0.5rem;">🚀 Make a Real-World Impact Through WIL</h2>
+  <p style="max-width: 700px; margin: 0 auto 1rem; font-size: 1rem; color: #333;">
+    Whether you're studying <strong>Chemistry</strong>, <strong>Communications</strong>, <strong>Marketing</strong>, or <strong>Leadership</strong> — there's a role for you in creating a greener future.
+  </p>
+  <p style="max-width: 700px; margin: 0 auto 1.5rem; font-size: 1rem; color: #333;">
+    Join our <strong>Work Integrated Learning (WIL)</strong> program to gain <strong>8–10 weeks of hands-on industry experience</strong>. Work on real sustainability initiatives that align with your interests and studies — and help restore nature while you build your future.
+  </p>
+  <a href="roles.html" class="cta-button">Explore Roles & WIL Opportunities</a>
+</section>
+
     <div class="section">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Manual_sprayer.jpg/375px-Manual_sprayer.jpg" alt="Pesticide spraying" />
       <div class="section-content">
